@startuml carmeri
' hide the spot
hide circle

' avoid problems with angled crows feet
skinparam linetype ortho

entity "users" as users {
  id
  --
  is_active
  family_name
  given_name
  email
  email_verified_at
  password
  created_at
  updated_at
}

entity "admins" as admins {
  id
  --
  family_name
  given_name
  email
  password
  created_at
  updated_at
}

entity "attendances" as attendances {
  id
  --
  user_id<FK>
  date
  status
  start_time
  end_time
  created_at
  updated_at
}

entity "break_times" as break_times {
  id
  --
  attendance_id<FK>
  start_time
  end_time
  created_at
  updated_at
}

entity "stamp_correction_requests" as stamp_correction_requests {
  id
  --
  attendance_id<FK>
  user_id<FK>
  is_approved
  request_date
  start_time
  end_time
  remarks
  created_at
  updated_at
}

entity "request_break_times" as request_break_times {
  id
  --
  stamp_correction_request_id<FK>
  start_time
  end_time
  created_at
  updated_at
}

attendances ||--o{ break_times
users ||--o{ attendances
stamp_correction_requests ||--|{ request_break_times
users ||--o{ stamp_correction_requests

@enduml